# storage

./: .gitignore  README.md  Zadania i priorities.txt  python.py  settings.json
bash/: cheatsheet.sh
dbt/bikeshare_data/: dbt_project.yml
dbt/bikeshare_data/models/import/: sources.yml
docker/: Dockerfile
git/: ssh_key_generation.md
markdown/: README.md  cheatsheet.md
python/: e02_comprehensions.ipynb  python.py  requirements.txt
python/dbt/bikeshare/: dbt_project.yml
python/dbt/bikeshare_data/: dbt_project.yml
python/dbt/bikeshare_data/models/import/: import_bikeshare_regions.sql  import_bikeshare_station_info.sql  import_bikeshare_station_status.sql  import_bikeshare_trips.sql  schema.yml
python/fastapi/: .dockerignore  Dockerfile  requirements.txt
python/general/: python.py  script.py
python/google_cloud_storage/: main.py
python/google_cloud_storage/website/: README.md
python/learning/: e03_error_handling.ipynb  e05_namespaces_and_scopes.ipynb  e06_debugging.ipynb  e07_logging.ipynb
python/learning/files/: e04_workfile.json  e04_workfile.txt
python/project_template/: .pre-commit-config.yaml  README.md  logger.conf  pyproject.toml  requirements-dev.txt  requirements.txt
python/project_template/app/: config.py  main.py
python/project_template/test/: conftest.py  test_sample.py
python/pubsub/: main.py
python/roadmap/: e01_data_types.ipynb  e03_error_handling.ipynb  e04_working_with_files.ipynb  e08_typing.ipynb
python/roadmap/e01_data_types/: e01_data_types.ipynb  e01_data_types.md  e01_data_types.py
python/secret_manager/: main.py
python/terraform/: main.tf  output.tf  terraform.tfvars  variables.tf
terraform/: output.tf
vscode/: baarosh.code-profile  baarosh_profile.code-profile  bash.bashrc  git-prompt.sh  launch.json  python.json  settings.json
