[tool.poetry]
name = "py-template"
version = "0.1.0"
description = ""
authors = ["Norbert <norbert.lipinski2@sky.uk>"]
readme = "README.md"
packages = [{include = "py_template"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "~23.7.0"
isort = "~5.12.0"
pylint = "~2.17.5"
mypy = "~1.4.1"
pytest = "~7.4.0"
pre-commit = "~3.3.3"

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = "True"

[tool.pylint.MASTER]
extension-pkg-whitelist = 'pyodbc'

[tool.pylint.'MESSAGES CONTROL']
disable=['missing-module-docstring']

[tool.pylint.'REPORTS']
msg-template='{path}:{line} - {msg} ({symbol})'

[tool.pytest.ini_options]
testpaths = ['test']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
