[tool.poetry]
name = "py-template"
version = "0.1.0"
description = ""
authors = ["Norbert <norbert.lipinski2@sky.uk>"]
readme = "README.md"
packages = [{include = "py_template"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
mypy = "~1.4.1"
pytest = "~7.4.0"
pre-commit = "~3.3.3"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]

[tool.ruff.format]

[tool.mypy]
ignore_missing_imports = "True"

[tool.pytest.ini_options]
testpaths = ['test']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
