[tool.poetry]
name = "py-template"
version = "0.1.0"
description = ""
authors = ["Norbert <norbert.lipinski2@sky.uk>"]
readme = "README.md"
packages = [{include = "py_template"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
pyright = "^1.1.333"
pytest = "~7.4.0"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["RUF", "I"]

[tool.pyright]
include = ["app"]

[tool.pytest.ini_options]
testpaths = ['test']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
